kubernetes/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: video-analysis
  name: video-analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-analysis
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: video-analysis
    spec:
      containers:
      - image: beaware/video-analysis:IMAGE_TAG
        imagePullPolicy: Always
        name: video-analysis
        ports:
        - containerPort: 9999
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
