kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: video-analysis
  name: video-analysis
spec:
  selector:
    app: video-analysis
  ports:
  - name: http
    port: 7777
    protocol: TCP
    targetPort: 9999
