kubernetes/ingress-prod-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: prod
  annotations:
    ingress.bluemix.net/redirect-to-https: "true"
  # Change to your application name
  name: video-analysis
spec:
  tls:
  - hosts:
    - beaware.uk-south.containers.mybluemix.net
    secretName: beaware
  rules:
  - host: beaware.uk-south.containers.mybluemix.net
    http:
      paths:
      - backend:
          # Change to your service name (kubernetes service)
          serviceName: video-analysis
          # Change to your service port
          servicePort: 7777
          # URL Suffix for example "/my-service"
        path: /video-analysis
